
stateDiagram-v2
    direction LR

    home --> coralPickup : when coralPickupButton
    coralPickup --> home : when homeButton
    home --> l1Score : when l1ScoreButton.and(hasCoral)
    home --> l2Score : when l2ScoreButton.and(hasCoral)
    home --> l3Score : when l3ScoreButton.and(hasCoral)
    home --> l4Score : when l4ScoreButton.and(hasCoral)
    l1Score --> spitScoreCoral : when scoreButton
    l2Score --> spitScoreCoral : when scoreButton
    l3Score --> spitScoreCoral : when scoreButton
    l4Score --> spitScoreCoral : when scoreButton
    spitScoreCoral --> home : when homeButton
    l2LowerScore --> home : when homeButton
    l3LowerScore --> home : when homeButton
    l4LowerScore --> home : when homeButton
    home --> algaeHome : when algaeFloorPickupButton
    home --> l2AlgaePickup : when l2ScoreButton
    home --> l3AlgaePickup : when l3ScoreButton
    algaeFloorPickup --> algaeHome : when homeButton.and(hasAlgae)
    l2AlgaePickup --> algaeHome : when homeButton.and(hasAlgae)
    l3AlgaePickup --> algaeHome : when homeButton.and(hasAlgae)
    algaeHome --> netScorePosition : when l4ScoreButton.and(hasAlgae)
    algaeHome --> processorScorePosition : when l1ScoreButton.and(hasAlgae)
    netScorePosition --> algaeHome : when homeButton.and(hasAlgae)
    netScorePosition --> home : when homeButton.and(hasAlgae.negate())
    netScorePosition --> processorScorePosition : when l1ScoreButton.and(hasAlgae)
    processorScorePosition --> algaeHome : when homeButton.and(hasAlgae)
    processorScorePosition --> netScorePosition : when l4ScoreButton.and(hasAlgae)
    processorScorePosition --> home : when homeButton.and(hasAlgae.negate())

    classDef brightGreen color: #00FF00
    classDef amber color: #FFBF00
    class home brightGreen
    class coralPickup amber
    